--- a/force-app/main/default/classes/helloWorld.cls
+++ b/force-app/main/default/classes/helloWorld.cls
@@ -1,5 +1,5 @@
 public with sharing class helloWorld {
     public helloWorld() {
-        System.debug('hello world');
+        System.debug('hello world, hny');
     }
 }
