--- a/force-app/main/default/classes/myclass.cls
+++ b/force-app/main/default/classes/myclass.cls
@@ -1,5 +1,6 @@
 public with sharing class myclass {
     public myclass() {
         system.debug('testing');
+        system.debug('testing new branch');
     }
 }
